# ltl-spec

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: formula.rs  lib.rs  normal_form.rs  parser.rs  safety_liveness.rs  satisfaction.rs  trace.rs
tests/: integration.rs
