[package]
name = "ltl-spec"
version = "0.1.0"
edition = "2024"
description = "Linear Temporal Logic (LTL) specification library for agents — parse, normalize, classify, and verify traces against LTL formulas"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/ltl-spec"
keywords = ["ltl", "temporal-logic", "verification", "model-checking", "formal-methods"]
categories = ["mathematics", "algorithms", "science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
